header dropdown now should now be on top of everything

--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -59,6 +59,7 @@ $h5: calc(.5vw + 1em);
 
 .mobile-menu{
 	height: calc(100vh - 88px);
+	z-index: 10;
 	width: 100%;
 	position: fixed;
 	flex-direction: column;
