--- a/src/scss/theme/global.scss
+++ b/src/scss/theme/global.scss
@@ -15,10 +15,10 @@ font-size: calc(1em + 1vmin);
 }
 
 a {
-	text-decoration: underline;
+	color: $color-gray-dark;
     &:focus,
     &:hover {
-
+		color: $color-primary-dark;
     }
 }
 
