--- a/src/scss/sections/content-block.scss
+++ b/src/scss/sections/content-block.scss
@@ -1,8 +1,8 @@
 .content-block {
-	margin: 0 auto;
+	margin: 2em auto;
 	width: 90vw;
 	&--narrow {
-		max-width: 80em;
+		max-width: 50em;
 	}
 	&--wide {
 		max-width: 90em;
