made the nav-link color variants in the wrong place. This is the correct code

--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -84,15 +84,15 @@
 	    background : $color-secondary;
 	  }
 
-	  &--success:after {
+	  &--tertiary:after {
+	    background : $color-tertiary;
+	  }
+
+    &--success:after {
 	    background : $color-success-dark;
 	  }
 
     &--purple:after {
-	    background : $color-success-dark;
-	  }
-
-    &--purplse:after {
 	    background : $color-purple;
 	  }
 
