--- a/src/scss/modules/portfolio-cards.scss
+++ b/src/scss/modules/portfolio-cards.scss
@@ -191,6 +191,7 @@ ul.target_thumb_img{
   .wrapper--alignleft {
   align-content: center;
   justify-content: center;
+  height: 700px;
 
 
   }
@@ -200,6 +201,15 @@ ul.target_thumb_img{
 
   }
 
+  .portfolio-content__wrapper {
+    padding: 17px;
+  }
+
+  .portfolio-content img {
+    max-height: 120px;
+    max-width: 120px;
+
+  }
 
 }
 
@@ -226,11 +236,14 @@ ul.target_thumb_img{
     max-width: 150px;
     max-height: 150px;
   }
+
+  .lightbox_images{
+    max-width: 90%;
+  }
+
 }
 
-.lightbox_images{
-  max-width: 90%;
-}
+
 
 // MEDIA QUERY FOR iphone 5s
 @media only screen and (max-width: 360px) {
