media query add
added media query to make cards display block on mobile

--- a/src/scss/sections/content-block.scss
+++ b/src/scss/sections/content-block.scss
@@ -11,3 +11,11 @@
 		display: flex;
 	}
 }
+
+@media only screen and (max-width: 1000px) {
+  body {
+    .content-block {
+			display:block;
+		}
+  }
+}
