--- a/src/scss/layout/footer.scss
+++ b/src/scss/layout/footer.scss
@@ -50,7 +50,7 @@ a{
 }
 
 a.fab {
-	padding: 0 1.5em;
+	padding: 0 1.2em;
 }
 
 .social {
@@ -73,6 +73,7 @@ a.fab {
 
 form {
     display: flex;
+    padding: 20px auto;
 
 }
 
@@ -97,5 +98,9 @@ form .clear{
 @media (max-width: 769px) {
   .footer-nav {
     display: block;
+  }
+
+  a.fab {
+  	padding: 0 .5em;
   }
 }
