changed .hero-image_card h1 to 1.4rem so that it fits better on mobile

--- a/src/scss/modules/hero.scss
+++ b/src/scss/modules/hero.scss
@@ -6,6 +6,7 @@ margin: auto;
 .hero-image__card h1 {
   margin-top: 20px;
   margin-bottom: 20px;
+  font-size: 1.4rem;
 }
 
 .hero-image__desktop {
