--- a/src/scss/modules/cards.scss
+++ b/src/scss/modules/cards.scss
@@ -25,7 +25,7 @@
 
     & p {
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
         margin: 1em;
         }
 
