--- a/src/scss/pages/guestbook.scss
+++ b/src/scss/pages/guestbook.scss
@@ -41,19 +41,19 @@ form {
 .message_field{
   flex: 1 1 90%;
 }
-.input-group label {
-    display: block;
-    text-align: left;
-    margin: 3px;
-}
-.input-group input {
-    height: 30px;
-    width: 93%;
-    padding: 5px 10px;
-    font-size: 16px;
-    border-radius: 5px;
-    border: 1px solid gray;
-}
+// .input-group label {
+//     display: block;
+//     text-align: left;
+//     margin: 3px;
+// }
+// .input-group input {
+//     height: 30px;
+//     width: 93%;
+//     padding: 5px 10px;
+//     font-size: 16px;
+//     border-radius: 5px;
+//     border: 1px solid gray;
+// }
 
 .button{
   margin: 0 auto;
