--- a/src/scss/theme/_variables.scss
+++ b/src/scss/theme/_variables.scss
@@ -34,7 +34,7 @@ $color-alert: #941414;
 $color-alert-light: lighten($color-alert, 20%);
 $color-alert-dark: darken($color-alert, 20%);
 
-$color-purple: #dacee6;
+$color-royalpurple: #dacee6;
 
 $color-light: #eee;
 $font-sans-serif: Helvetica, Roboto, sans-serif;
