--- a/src/scss/modules/portfolio-cards.scss
+++ b/src/scss/modules/portfolio-cards.scss
@@ -160,7 +160,7 @@ ul.target_thumb_img{
 }
 
 .target_thumb_img li{
-  padding: 0;
+  padding: 6px;
   display: flex;
   justify-content: space-around;
   flex: 0 1 100px;
@@ -179,6 +179,8 @@ ul.target_thumb_img{
 // MEDIA QUERY FOR TABLET SIZE
 @media only screen and (min-width: 500px) {
     .social-wrapper {
+      margin-top: 90px;
+      padding-top: 10px;
       display: flex;
       align-content: center;
       width: 350px;
@@ -191,9 +193,10 @@ ul.target_thumb_img{
 
 
   .wrapper--alignleft {
+  margin-top: 20px;
   align-content: center;
   justify-content: center;
-  height: 700px;
+  height: 600px;
 
 
   }
@@ -218,19 +221,23 @@ ul.target_thumb_img{
 // MEDIA QUERY FOR DESKTOP
 @media only screen and (min-width: 1265px) {
 
+.portfolio-card__container {
+
+}
+
   .portfolio-content__wrapper {
     margin-left: 20px;
     margin-right: 20px;
-    margin-top: 0;
+    margin-top: 30px;
     margin-bottom: 0;
   }
 
   .wrapper--alignleft {
-  height: 600px;
+  height: 300px;
 
   }
   .wrapper--alignright {
-  height: 600px;
+  height: 300px;
   }
 
   .portfolio-content img {
